--- a/js/package.json
+++ b/js/package.json
@@ -40,6 +40,7 @@
     "react": "15.x",
     "react-dom": "15.x",
     "react-hot-loader": "^1.3.0",
+    "jupyter-react-js": "^0.5.1",
     "@timbr/react-machine": "^0.1.0"
   }
 }
