--- a/js/package.json
+++ b/js/package.json
@@ -13,8 +13,8 @@
     "ipython"
   ],
   "scripts": {
-    "prepublish": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-prod": "NODE_ENV=production npm i && webpack -p",
+    "prepublish": "webpack"
   },
   "devDependencies": {
     "css-loader": "^0.23.1",
