--- a/js/package.json
+++ b/js/package.json
@@ -13,23 +13,25 @@
     "ipython"
   ],
   "scripts": {
+    "build": "npm i",
     "build-prod": "NODE_ENV=production npm i && webpack",
+    "dev": "npm i && webpack -w",
     "prepublish": "webpack"
   },
   "devDependencies": {
     "css-loader": "^0.23.1",
     "json-loader": "^0.5.4",
-    "postcss-import": "^8.2.0",
+    "jsx-loader": "^0.13.2",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "postcss-import": "^8.2.0",
     "postcss-loader": "^0.13.0",
     "postcss-modules-values": "^1.2.2",
     "postcss-nested": "^1.0.0",
-    "jsx-loader": "^0.13.2",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
-    "webpack": "^1.12.14"
+    "webpack": "^1.14.0",
+    "webpack-visualizer-plugin": "^0.1.5"
   },
   "dependencies": {
     "autobind-decorator": "^1.3.3",
