--- a/js/package.json
+++ b/js/package.json
@@ -19,7 +19,8 @@
     "prepublish": "webpack"
   },
   "devDependencies": {
-    "css-loader": "^0.23.1",
+    "css-loader": "^0.26.0",
+    "happypack": "^3.0.1",
     "json-loader": "^0.5.4",
     "jsx-loader": "^0.13.2",
     "less": "^2.7.1",
@@ -28,10 +29,8 @@
     "postcss-loader": "^0.13.0",
     "postcss-modules-values": "^1.2.2",
     "postcss-nested": "^1.0.0",
-    "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
-    "webpack": "^1.14.0",
-    "webpack-visualizer-plugin": "^0.1.5"
+    "webpack": "^1.14.0"
   },
   "dependencies": {
     "autobind-decorator": "^1.3.3",
