--- a/js/package.json
+++ b/js/package.json
@@ -19,6 +19,7 @@
     "prepublish": "webpack"
   },
   "devDependencies": {
+    "babel-install": "2.1.0",
     "css-loader": "^0.26.0",
     "happypack": "^3.0.1",
     "json-loader": "^0.5.4",
@@ -30,22 +31,31 @@
     "postcss-modules-values": "^1.2.2",
     "postcss-nested": "^1.0.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.14.0"
+    "webpack": "^1.15.0"
   },
   "dependencies": {
+    "@timbr/react-machine": "^0.1.0",
+    "ajv": "^5.2.3",
+    "ajv-keywords": "^2.1.0",
     "autobind-decorator": "^1.3.3",
+    "babel": "^6.23.0",
     "babel-cli": "^6.10.1",
-    "babel-loader": "^6.2.4",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^6.4.1",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-decorators": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
+    "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-1": "^6.5.0",
     "classnames": "^2.2.5",
     "flux": "^2.1.1",
-    "react": "15.x",
-    "react-dom": "15.x",
+    "jupyter-react-js": "^0.5.1",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
     "react-hot-loader": "^1.3.0",
-    "@timbr/react-machine": "^0.1.0"
+    "regenerator-transform": "^0.11.0"
   }
 }
